force-app/main/default/objects/Campaign/fields/Account_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Account_Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C_Account(Fundraiser)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (C_Account(Fundraiser))</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>