force-app/main/default/objects/Campaign/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <inlineHelpText>Account number is matched to the finance system.</inlineHelpText>
    <label>GL Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GL_Codes</valueSetName>
    </valueSet>
</CustomField>