force-app/main/default/objects/Campaign/fields/Annotations__c.field-meta.xml
<CustomField>
    <fullName>Annotations__c</fullName>
    <label>Annotations</label>
    <type>TextArea</type>
</CustomField>