force-app/main/default/objects/Campaign/fields/Available_Getting_Home_Locations__c.field-meta.xml
<CustomField>
    <fullName>Available_Getting_Home_Locations__c</fullName>
    <label>Available Getting Home Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transport_Locations</valueSetName>
    </valueSet>
</CustomField>