force-app/main/default/objects/Campaign/fields/Banner_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_Image_URL__c</fullName>
    <inlineHelpText>Banner Image for Event</inlineHelpText>
    <label>Banner Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>