force-app/main/default/objects/Campaign/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Fundraising Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>=&quot;01&quot;</fullName>
                <label>01 - Head Office</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Sydney SYD</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>31 - Melbourne VIC</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>41 - Brisbane SQLD</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>51 - Adelaide SA</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>71 - Hobart TAS</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>81 - Perth WA</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>91 - Darwin NT</label>
            </value>
            <value>
                <fullName>No Branch Code Allocated</fullName>
                <default>true</default>
                <label>No Branch Code Allocated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>