force-app/main/default/objects/Campaign/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <description>Budgeted Amount</description>
    <inlineHelpText>amount that appears in the approved budget</inlineHelpText>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>