force-app/main/default/objects/Campaign/fields/Campaign_code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_code__c</fullName>
    <label>C_Campaign code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>