force-app/main/default/objects/Campaign/fields/Campaign_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Name__c</fullName>
    <formula>Owner.FirstName + &quot; &quot; +  Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Owner Name</label>
    <type>Text</type>
</CustomField>