force-app/main/default/objects/Campaign/fields/Campaign_URL__c.field-meta.xml
<CustomField>
    <fullName>Campaign_URL__c</fullName>
    <label>C_Campaign URL</label>
    <type>Url</type>
</CustomField>