force-app/main/default/objects/Campaign/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The Code field is required to create barcodes and must be unique hence the Autonumber</description>
    <displayFormat>{000}1</displayFormat>
    <inlineHelpText>The Code field is required to create barcodes and is the second part of the code.</inlineHelpText>
    <label>Code</label>
    <type>AutoNumber</type>
</CustomField>