force-app/main/default/objects/Campaign/fields/Contact_Fundraiser_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fundraiser_Id__c</fullName>
    <formula>md_npsp_pack__Fundraising_Contact__r.Case_Safe_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact (Fundraiser) Id</label>
    <type>Text</type>
</CustomField>