force-app/main/default/objects/Campaign/fields/Contact_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fundraising__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C_Contact (Fundraising)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (C_Contact (Fundraising))</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>