force-app/main/default/objects/Campaign/fields/Corporate_Partner_Linked_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Partner_Linked_to_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corporate Partner linked to this campaign by agreement</description>
    <inlineHelpText>Corporate Partner linked to this campaign by agreement</inlineHelpText>
    <label>Corporate Partner Linked to Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Corporate Partner Linked to Campaign)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>