force-app/main/default/objects/Campaign/fields/CQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CQ_Contact__c</fullName>
    <label>CQ Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>