force-app/main/default/objects/Campaign/fields/Date_Incident_Uploaded_to_Dropbox__c.field-meta.xml
<CustomField>
    <fullName>Date_Incident_Uploaded_to_Dropbox__c</fullName>
    <label>Date Incident Uploaded to Dropbox</label>
    <type>Date</type>
</CustomField>