force-app/main/default/objects/Campaign/fields/Date_Uploaded_NIT_To_Dropbox__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded_NIT_To_Dropbox__c</fullName>
    <label>Date Uploaded NIT To Dropbox</label>
    <type>Date</type>
</CustomField>