force-app/main/default/objects/Campaign/fields/Email_Open_Rate_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Email_Open_Rate_in_Campaign__c</fullName>
    <formula>UniqueEmailOpens / TotalEmailsDelivered</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Open Rate in Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>