force-app/main/default/objects/Campaign/fields/Event_Acceptance_Note__c.field-meta.xml
<CustomField>
    <fullName>Event_Acceptance_Note__c</fullName>
    <label>Event Acceptance Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>