force-app/main/default/objects/Campaign/fields/Event_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Event_Actual_Cost__c</fullName>
    <inlineHelpText>Total based on all event vendor records.</inlineHelpText>
    <label>Event Actual Cost</label>
    <summarizedField>Event_Vendor__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>