force-app/main/default/objects/Campaign/fields/Event_Donation_Value__c.field-meta.xml
<CustomField>
    <fullName>Event_Donation_Value__c</fullName>
    <inlineHelpText>Total based on all event vendor records.</inlineHelpText>
    <label>Event Donation Value</label>
    <summarizedField>Event_Vendor__c.Donation_Value__c</summarizedField>
    <summaryForeignKey>Event_Vendor__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>