force-app/main/default/objects/Campaign/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <description>Event Duration in hours for volunteers</description>
    <formula>(Event_End_Date__c  -  Event_Start_Date__c) *24</formula>
    <label>Event Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>