force-app/main/default/objects/Campaign/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <inlineHelpText>This field is used for calculating the duration of the event which is used in calculating volunteer hours for an event.</inlineHelpText>
    <label>Event End Date</label>
    <type>DateTime</type>
</CustomField>