force-app/main/default/objects/Campaign/fields/Event_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Group__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>ACT/ILLA</fullName>
            </value>
            <value>
                <fullName>CQLD</fullName>
            </value>
            <value>
                <fullName>ILLA</fullName>
            </value>
            <value>
                <fullName>NAT</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
            <value>
                <fullName>NNSW</fullName>
            </value>
            <value>
                <fullName>NQLD</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SA/NT</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>SNSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>