force-app/main/default/objects/Campaign/fields/Event_Id2__c.field-meta.xml
<CustomField>
    <fullName>Event_Id2__c</fullName>
    <externalId>true</externalId>
    <label>Event Id2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>