force-app/main/default/objects/Campaign/fields/Event_Image__c.field-meta.xml
<CustomField>
    <fullName>Event_Image__c</fullName>
    <description>Event Image for email templates</description>
    <label>Event Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>