force-app/main/default/objects/Campaign/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <inlineHelpText>This field is used for calculating the duration of an event, which is used to help calculate volunteer hours.</inlineHelpText>
    <label>Event Start Date</label>
    <type>DateTime</type>
</CustomField>