force-app/main/default/objects/Campaign/fields/Event_time__c.field-meta.xml
<CustomField>
    <fullName>Event_time__c</fullName>
    <description>Event time for email merge</description>
    <label>Event time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>