force-app/main/default/objects/Campaign/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family Camp</fullName>
            </value>
            <value>
                <fullName>Family Experience</fullName>
            </value>
            <value>
                <fullName>Family Fun Day</fullName>
            </value>
            <value>
                <fullName>Family Respite</fullName>
            </value>
            <value>
                <fullName>Fundraising Event</fullName>
            </value>
            <value>
                <fullName>Hospital Program</fullName>
            </value>
            <value>
                <fullName>Junior Camp</fullName>
            </value>
            <value>
                <fullName>Middle Camp</fullName>
            </value>
            <value>
                <fullName>Mini Camp</fullName>
            </value>
            <value>
                <fullName>Volunteer Recognition Event</fullName>
            </value>
            <value>
                <fullName>Volunteer Training Days</fullName>
            </value>
            <value>
                <fullName>Multi Age Group Camp</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Office Volunteering</fullName>
            </value>
            <value>
                <fullName>Family Playgroup</fullName>
            </value>
            <value>
                <fullName>Family Dinner/Pizza Night</fullName>
            </value>
            <value>
                <fullName>Pilot - Age Camp Meet the Family</fullName>
            </value>
            <value>
                <fullName>Volunteer Leadership Induction</fullName>
            </value>
            <value>
                <fullName>Volunteer Oranges</fullName>
            </value>
            <value>
                <fullName>Volunteer Other Induction/Training</fullName>
            </value>
            <value>
                <fullName>Puppet Tour</fullName>
            </value>
            <value>
                <fullName>Grad Camp</fullName>
            </value>
            <value>
                <fullName>Virtual Camp</fullName>
            </value>
            <value>
                <fullName>Fundraising/Corporate</fullName>
            </value>
            <value>
                <fullName>Live Performance</fullName>
            </value>
            <value>
                <fullName>Raffle</fullName>
            </value>
            <value>
                <fullName>P2P Fundraising</fullName>
            </value>
            <value>
                <fullName>Community Fundraising</fullName>
            </value>
            <value>
                <fullName>Regular Giving</fullName>
            </value>
            <value>
                <fullName>Single Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>