force-app/main/default/objects/Campaign/fields/Families_Requested_To_Attend__c.field-meta.xml
<CustomField>
    <fullName>Families_Requested_To_Attend__c</fullName>
    <label>Families Requested To Attend</label>
    <summarizedField>Registration_Type__c.Requested__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Corporate Volunteer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Volunteer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Volunteer Training</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>