force-app/main/default/objects/Campaign/fields/FamiliesAttended__c.field-meta.xml
<CustomField>
    <fullName>FamiliesAttended__c</fullName>
    <label>Families Attended</label>
    <summaryFilterItems>
        <field>Family_Attendance__c.FA_00000__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Family_Attendance__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>