force-app/main/default/objects/Campaign/fields/Family_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Event_Type__c</fullName>
    <label>Family Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>