force-app/main/default/objects/Campaign/fields/Family_Fill_Percent__c.field-meta.xml
<CustomField>
    <fullName>Family_Fill_Percent__c</fullName>
    <formula>( Family_Registrations_Available__c  - Family_Registrations_Remaining__c  )/Family_Registrations_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Fill Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>