force-app/main/default/objects/Campaign/fields/Family_Interest__c.field-meta.xml
<CustomField>
    <fullName>Family_Interest__c</fullName>
    <label>Family Interest</label>
    <summarizedField>Registration_Type__c.Interested__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Volunteer</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Volunteer Training</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Registration_Type__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Corporate Volunteer</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Type__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>