force-app/main/default/objects/Campaign/fields/Family_Member_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_Attendance__c</fullName>
    <label>Family Member Attendance</label>
    <summarizedField>Family_Attendance__c.Attended_Members__c</summarizedField>
    <summaryForeignKey>Family_Attendance__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>