force-app/main/default/objects/Campaign/fields/Family_Portal_Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Family_Portal_Event_URL__c</fullName>
    <formula>$Setup.My_Camp_Quality_Settings__c.Community_Base_URL__c &amp; &apos;/portalpage?p=event&amp;s=familyPortal&amp;e=&apos; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Portal Event URL</label>
    <type>Text</type>
</CustomField>