force-app/main/default/objects/Campaign/fields/Fundraiser_added_as_member__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_added_as_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fundraiser added as member</label>
    <type>Checkbox</type>
</CustomField>