force-app/main/default/objects/Campaign/fields/Fundraiser_Funraisin_Id__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Funraisin_Id__c</fullName>
    <formula>Fundraiser__r.Funraisin__Funraisin_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundraiser Funraisin Id</label>
    <type>Text</type>
</CustomField>