force-app/main/default/objects/Campaign/fields/Fundraiser_Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Page_ID__c</fullName>
    <externalId>true</externalId>
    <label>Fundraiser Page ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>