force-app/main/default/objects/Campaign/fields/Funraisin_Id__c.field-meta.xml
<CustomField>
    <fullName>Funraisin_Id__c</fullName>
    <label>C_Funraisin Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>