force-app/main/default/objects/Campaign/fields/GL_Override__c.field-meta.xml
<CustomField>
    <fullName>GL_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to prevent the campaign inheriting the GL code from the parent</description>
    <label>GL Override</label>
    <type>Checkbox</type>
</CustomField>