force-app/main/default/objects/Campaign/fields/GST_On_Campaign__c.field-meta.xml
<CustomField>
    <fullName>GST_On_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST On Campaign</label>
    <type>Checkbox</type>
</CustomField>