force-app/main/default/objects/Campaign/fields/Image_Upload__c.field-meta.xml
<CustomField>
    <fullName>Image_Upload__c</fullName>
    <label>Image Upload</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>