force-app/main/default/objects/Campaign/fields/Incident_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Signoff_Date__c</fullName>
    <label>Incident Signoff Date</label>
    <type>Date</type>
</CustomField>