force-app/main/default/objects/Campaign/fields/Income_was_Pre_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Income_was_Pre_Budgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income was Pre-Budgeted</label>
    <type>Checkbox</type>
</CustomField>