force-app/main/default/objects/Campaign/fields/IsOverNightAgeCamp__c.field-meta.xml
<CustomField>
    <fullName>IsOverNightAgeCamp__c</fullName>
    <formula>OR( text(Event_Type__c) = &apos;Junior Camp&apos;, text(Event_Type__c) = &apos;Middle Camp&apos;,text(Event_Type__c) = &apos;Multi Age Group Camp&apos;, text(Event_Type__c) = &apos;Graduation Camp&apos;, text(Event_Type__c) = &apos;Senior Camp&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOverNightAgeCamp</label>
    <type>Checkbox</type>
</CustomField>