force-app/main/default/objects/Campaign/fields/LanyardTextLine1__c.field-meta.xml
<CustomField>
    <fullName>LanyardTextLine1__c</fullName>
    <label>LanyardTextLine1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>