force-app/main/default/objects/Campaign/fields/LanyardTextLine2__c.field-meta.xml
<CustomField>
    <fullName>LanyardTextLine2__c</fullName>
    <label>LanyardTextLine2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>