force-app/main/default/objects/Campaign/fields/Legacy_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Event Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>