force-app/main/default/objects/Campaign/fields/Level_Of_Family_Interest__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Family_Interest__c</fullName>
    <formula>Family_Interest__c	 /  Family_Registrations_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Of Family Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>