force-app/main/default/objects/Campaign/fields/Location_Venue__c.field-meta.xml
<CustomField>
    <fullName>Location_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location / Venue</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Location / Venue)</relationshipLabel>
    <relationshipName>LocationCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>