force-app/main/default/objects/Campaign/fields/National_Approval_Given_By__c.field-meta.xml
<CustomField>
    <fullName>National_Approval_Given_By__c</fullName>
    <label>National Approval Given By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>