force-app/main/default/objects/Campaign/fields/Net_Payment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Recieved__c</fullName>
    <label>Net Payments Recieved</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>