force-app/main/default/objects/Campaign/fields/No_Acceptance_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_Acceptance_Sent__c</fullName>
    <label>No Acceptance Sent</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Acceptance Sent, Attended to be sent</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>