force-app/main/default/objects/Campaign/fields/No_Of_Incidents_Reported__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Incidents_Reported__c</fullName>
    <description>No of full incident report forms</description>
    <inlineHelpText>No of full incident report forms</inlineHelpText>
    <label>No Of Incidents Reported</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>