force-app/main/default/objects/Campaign/fields/No_Of_Invites_Sent__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Invites_Sent__c</fullName>
    <label>No Of Invites Sent</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>notEqual</operation>
        <value>Invitation to be Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>