force-app/main/default/objects/Campaign/fields/No_of_NIT__c.field-meta.xml
<CustomField>
    <fullName>No_of_NIT__c</fullName>
    <description>Number of non invasive treatments</description>
    <inlineHelpText>Number of non invasive treatments</inlineHelpText>
    <label>No of NIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>