force-app/main/default/objects/Campaign/fields/NoCampaigns__c.field-meta.xml
<CustomField>
    <fullName>NoCampaigns__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>