force-app/main/default/objects/Campaign/fields/Number_Children_Attended__c.field-meta.xml
<CustomField>
    <fullName>Number_Children_Attended__c</fullName>
    <inlineHelpText>children under 18 who attended the event</inlineHelpText>
    <label>Number Children Attended</label>
    <summarizedField>Family_Attendance__c.Children_Under_18_Attended__c</summarizedField>
    <summaryForeignKey>Family_Attendance__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>