force-app/main/default/objects/Campaign/fields/Number_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_Sent__c</fullName>
    <label>Number Sent</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>