force-app/main/default/objects/Campaign/fields/Online_fundraising_page__c.field-meta.xml
<CustomField>
    <fullName>Online_fundraising_page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online fundraising page</label>
    <type>Checkbox</type>
</CustomField>