force-app/main/default/objects/Campaign/fields/Overall_Level_of_Risk_for_the_Event__c.field-meta.xml
<CustomField>
    <fullName>Overall_Level_of_Risk_for_the_Event__c</fullName>
    <label>Overall Level of Risk for the Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>